--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,13 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+#forge
+minecraft_version = 1.12.2
+forge_version = 14.23.2.2611
+forge_mappings = snapshot_20180206
+
+#general
+mod_version = 2
+mod_name = twitchy
+base_package = ocdiary.twitchy
