fixed lang keys and downgraded forge to 1.12 recommended

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@
 org.gradle.jvmargs=-Xmx3G
 
 #forge
-minecraft_version = 1.12.2
-forge_version = 14.23.2.2611
-forge_mappings = snapshot_20180206
+minecraft_version = 1.12
+forge_version = 14.21.1.2387
+forge_mappings = snapshot_20180621
 
 #general
 mod_version = 2.0.0
-mod_name = twitchy
-base_package = ocdiary.twitchy
+mod_name = streamy
+base_package = ocdiary.streamy
