changed package name to mdct

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ forge_mappings = snapshot_20180621
 #general
 mod_version = 2.0.0
 mod_name = streamy
-base_package = p3psie.streamy
+base_package = mdct.streamy
