Corrected main mod file to replace version in

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ minecraft {
     makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     replace "@VERSION@", project.mod_version
-    replaceIn "Twitchy.java"
+    replaceIn "Streamy.java"
 }
 
 dependencies {
